syntax = "proto3";
package gov.hhs.aspr.gcm.translation.protobuf;

option java_multiple_files = true;
option java_package = "gov.hhs.aspr.gcm.translation.protobuf.plugins.resources.input";

import "regions-plugin.proto";
import "people-plugin.proto";
import "properties-plugin.proto";
import "reports-plugin.proto";
import "google/protobuf/any.proto";

message ResourceIdInput {
    google.protobuf.Any id = 1;
}

message ResourcePropertyIdInput {
    google.protobuf.Any id = 1;
}

message ResourceIdMapInput {
    ResourceIdInput resourceId = 1;
    double resourceTime = 2;
    bool resourceTimeTrackingPolicy = 3;
}

message ResourcePropertyDefinitionMapInput {
    ResourceIdInput resourceId = 1;
    PropertyDefinitionMapInput resourcePropertyDefinitionMap = 2;
}

message ResourceInitializationInput {
    ResourceIdInput resourceId = 1;
    int64 amount = 2;
}

message PersonResourceInput {
    int32 personId = 1;
    optional int64 amount = 2;
    optional double resourceTime = 3;
}

message RegionResourceInput {
    RegionIdInput regionId = 1;
    int64 amount = 2;
}

message ResourcePropertyValueMapInput {
    ResourceIdInput resourceId = 1;
    PropertyValueMapInput resourcePropertyValueMap = 2;
}

message PersonResourceLevelsInput {
    ResourceIdInput resourceId = 1;
    repeated PersonResourceInput personResourceLevels = 2;
}

message RegionResourceLevelsInput {
    ResourceIdInput resourceId = 1;
    repeated RegionResourceInput regionResourceLevels = 2;
}

message ResourcesPluginDataInput {
    repeated ResourceIdMapInput resourceIds = 1;
    repeated ResourcePropertyDefinitionMapInput resourcePropertyDefinitions = 2;
    repeated ResourcePropertyValueMapInput resourcePropertyValues = 3;
    repeated PersonResourceLevelsInput personResourceLevels = 4;
    repeated RegionResourceLevelsInput regionResourceLevels = 5;
}

message PersonResourceReportPluginDataInput {
    ReportLabelInput reportLabel = 1;
    ReportPeriodInput reportPeriod = 2;
    repeated ResourceIdInput includedProperties = 3;
    repeated ResourceIdInput excludedProperties = 4;
    bool defaultInclusionPolicy = 5;
}

message ResourcePropertyReportPluginDataInput {
    ReportLabelInput reportLabel = 1;
}

message ResourceReportPluginDataInput {
    ReportLabelInput reportLabel = 1;
    ReportPeriodInput reportPeriod = 2;
    repeated ResourceIdInput includedProperties = 3;
    repeated ResourceIdInput excludedProperties = 4;
    bool defaultInclusionPolicy = 5;
}

enum TestResourcePropertyIdInput {
    ResourceProperty_1_1_BOOLEAN_MUTABLE = 0;
    ResourceProperty_1_2_INTEGER_MUTABLE = 1;
    ResourceProperty_1_3_DOUBLE_MUTABLE = 2;
    ResourceProperty_2_1_BOOLEAN_MUTABLE = 3;
    ResourceProperty_2_2_INTEGER_MUTABLE = 4;
    ResourceProperty_3_1_BOOLEAN_MUTABLE = 5;
    ResourceProperty_3_2_STRING_MUTABLE = 6;
    ResourceProperty_4_1_BOOLEAN_MUTABLE = 7;
    ResourceProperty_5_1_INTEGER_IMMUTABLE = 8;
    ResourceProperty_5_2_DOUBLE_IMMUTABLE = 9;
}

enum TestResourceIdInput {
    RESOURCE_1 = 0;
    RESOURCE_2 = 1;
    RESOURCE_3 = 2;
    RESOURCE_4 = 3;
    RESOURCE_5 = 4;
}